force-app/main/default/objects/Bookstore_Book__c/Bookstore_Book__c.object-meta.xml
<CustomObject>
    <label>Bookstore_Book</label>
    <nameField>
        <label>Bookstore_Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bookstore_Books</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>