force-app/main/default/objects/Bookstore_Book__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <label>Book</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Bookstore Books</relationshipLabel>
    <relationshipName>Bookstore_Books</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>