force-app/main/default/objects/Bookstore_Book__c/fields/Bookstore__c.field-meta.xml
<CustomField>
    <fullName>Bookstore__c</fullName>
    <label>Bookstore</label>
    <referenceTo>Bookstore__c</referenceTo>
    <relationshipLabel>Bookstore Books</relationshipLabel>
    <relationshipName>Bookstore_Books</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>