force-app/main/default/objects/Bookstore_Book__c/fields/Number_Of_Active_Reservations__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Active_Reservations__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Active Reservations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>