force-app/main/default/objects/Bookstore_Book__c/fields/Unique_Concatanated_Ids__c.field-meta.xml
<CustomField>
    <fullName>Unique_Concatanated_Ids__c</fullName>
    <formula>CASESAFEID(Bookstore__r.Id) &amp; CASESAFEID(Book__r.Id)</formula>
    <label>Unique Concatanated Ids</label>
    <type>Text</type>
</CustomField>