force-app/main/default/objects/Bookstore_Book__c/validationRules/Number_Of_Active_Reservations_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_Of_Active_Reservations_VR</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Book__r.RecordType.DeveloperName  = &apos;Paper Book&apos;,
       Number_Of_Active_Reservations__c  &gt;  Quantity__c )</errorConditionFormula>
    <errorMessage>Number of active reservations cannot exceed the book quantity!</errorMessage>
</ValidationRule>